# eugpp-clustering

./: .gitignore  Makefile  README.md
data/gmm_results/: AA_gmm_results.csv  AB_gmm_results.csv  BA_gmm_results.csv  BB_gmm_results.csv
data/kmeans_results/: AA_kmeans_results.csv  AB_kmeans_results.csv  BA_kmeans_results.csv  BB_kmeans_results.csv
data/mice_imputations/: subdata_AA_p1_imp1.csv  subdata_AA_p1_imp2.csv  subdata_AA_p1_imp3.csv  subdata_AA_p1_imp4.csv  subdata_AA_p1_imp5.csv  subdata_AA_p2_imp1.csv  subdata_AA_p2_imp2.csv  subdata_AA_p2_imp3.csv  subdata_AA_p2_imp4.csv  subdata_AA_p2_imp5.csv  subdata_AA_p3_imp1.csv  subdata_AA_p3_imp2.csv  subdata_AA_p3_imp3.csv  subdata_AA_p3_imp4.csv  subdata_AA_p3_imp5.csv  subdata_AA_p4_imp1.csv  subdata_AA_p4_imp2.csv  subdata_AA_p4_imp3.csv  subdata_AA_p4_imp4.csv  subdata_AA_p4_imp5.csv  subdata_AA_p5_imp1.csv  subdata_AA_p5_imp2.csv  subdata_AA_p5_imp3.csv  subdata_AA_p5_imp4.csv  subdata_AA_p5_imp5.csv  subdata_AB_p1_imp1.csv  subdata_AB_p1_imp2.csv  subdata_AB_p1_imp3.csv  subdata_AB_p1_imp4.csv  subdata_AB_p1_imp5.csv  subdata_AB_p2_imp1.csv  subdata_AB_p2_imp2.csv  subdata_AB_p2_imp3.csv  subdata_AB_p2_imp4.csv  subdata_AB_p2_imp5.csv  subdata_AB_p3_imp1.csv  subdata_AB_p3_imp2.csv  subdata_AB_p3_imp3.csv  subdata_AB_p3_imp4.csv  subdata_AB_p3_imp5.csv  (+60 more)
lib/R/: R.Rproj  main.R
lib/python/: main.py  pyproject.toml
lib/python/notebooks/: UMAP-reduction.ipynb  clustering.ipynb
lib/python/src/: clustering.py  config.py  profiling.py  umap.py
metadata/: Clustering.md  UMAP.md  theoretical_outline.xlsx
(+9 files in other folders)
