[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hdbscan>=0.8.40",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.7",
]
